lab3/HaskellParser.py
# Generated from Haskell.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class HaskellParser ( Parser ):

    grammarFileName = "Haskell.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'data'", "'='", "'::'", "'->'", "'|'",
                     "'+'", "'-'", "'*'", "'/'", "'Int'", "'Bool'", "'['",
                     "']'", "'('", "','", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "VAR", "NUM", "TYPENAME", "WS" ]

    RULE_prog = 0
    RULE_decl = 1
    RULE_typeDecl = 2
    RULE_funcDecl = 3
    RULE_funcBody = 4
    RULE_typeDeclType = 5
    RULE_typeParams = 6
    RULE_constructors = 7
    RULE_constructor = 8
    RULE_varList = 9
    RULE_expr = 10
    RULE_funcCall = 11
    RULE_exprList = 12
    RULE_binOp = 13
    RULE_var = 14
    RULE_num = 15
    RULE_haskellType = 16
    RULE_typeName = 17

    ruleNames =  [ "prog", "decl", "typeDecl", "funcDecl", "funcBody", "typeDeclType",
                   "typeParams", "constructors", "constructor", "varList",
                   "expr", "funcCall", "exprList", "binOp", "var", "num",
                   "haskellType", "typeName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    VAR=17
    NUM=18
    TYPENAME=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.DeclContext)
            else:
                return self.getTypedRuleContext(HaskellParser.DeclContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = HaskellParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HaskellParser.T__0 or _la==HaskellParser.VAR:
                self.state = 36
                self.decl()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeDecl(self):
            return self.getTypedRuleContext(HaskellParser.TypeDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(HaskellParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = HaskellParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HaskellParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.typeDecl()
                pass
            elif token in [HaskellParser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.funcDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(HaskellParser.TypeNameContext,0)


        def constructors(self):
            return self.getTypedRuleContext(HaskellParser.ConstructorsContext,0)


        def typeParams(self):
            return self.getTypedRuleContext(HaskellParser.TypeParamsContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_typeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDecl" ):
                listener.enterTypeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDecl" ):
                listener.exitTypeDecl(self)




    def typeDecl(self):

        localctx = HaskellParser.TypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(HaskellParser.T__0)
            self.state = 47
            self.typeName()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HaskellParser.VAR:
                self.state = 48
                self.typeParams()


            self.state = 51
            self.match(HaskellParser.T__1)
            self.state = 52
            self.constructors()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(HaskellParser.VarContext,0)


        def typeDeclType(self):
            return self.getTypedRuleContext(HaskellParser.TypeDeclTypeContext,0)


        def funcBody(self):
            return self.getTypedRuleContext(HaskellParser.FuncBodyContext,0)


        def varList(self):
            return self.getTypedRuleContext(HaskellParser.VarListContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)




    def funcDecl(self):

        localctx = HaskellParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.var()
                self.state = 55
                self.match(HaskellParser.T__2)
                self.state = 56
                self.typeDeclType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.var()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HaskellParser.VAR:
                    self.state = 59
                    self.varList()


                self.state = 62
                self.match(HaskellParser.T__1)
                self.state = 63
                self.funcBody()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(HaskellParser.ExprContext,0)


        def var(self):
            return self.getTypedRuleContext(HaskellParser.VarContext,0)


        def varList(self):
            return self.getTypedRuleContext(HaskellParser.VarListContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)




    def funcBody(self):

        localctx = HaskellParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcBody)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.var()
                self.state = 69
                self.varList()
                self.state = 70
                self.match(HaskellParser.T__1)
                self.state = 71
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def haskellType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.HaskellTypeContext)
            else:
                return self.getTypedRuleContext(HaskellParser.HaskellTypeContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_typeDeclType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclType" ):
                listener.enterTypeDeclType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclType" ):
                listener.exitTypeDeclType(self)




    def typeDeclType(self):

        localctx = HaskellParser.TypeDeclTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeDeclType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.haskellType(0)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HaskellParser.T__3:
                self.state = 76
                self.match(HaskellParser.T__3)
                self.state = 77
                self.haskellType(0)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.VarContext)
            else:
                return self.getTypedRuleContext(HaskellParser.VarContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_typeParams

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeParams" ):
                listener.enterTypeParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeParams" ):
                listener.exitTypeParams(self)




    def typeParams(self):

        localctx = HaskellParser.TypeParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeParams)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.var()
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 84
                    self.var()
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constructor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.ConstructorContext)
            else:
                return self.getTypedRuleContext(HaskellParser.ConstructorContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_constructors

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructors" ):
                listener.enterConstructors(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructors" ):
                listener.exitConstructors(self)




    def constructors(self):

        localctx = HaskellParser.ConstructorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constructors)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.constructor()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HaskellParser.T__4:
                self.state = 91
                self.match(HaskellParser.T__4)
                self.state = 92
                self.constructor()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(HaskellParser.TypeNameContext,0)


        def typeParams(self):
            return self.getTypedRuleContext(HaskellParser.TypeParamsContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_constructor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructor" ):
                listener.enterConstructor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructor" ):
                listener.exitConstructor(self)




    def constructor(self):

        localctx = HaskellParser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.typeName()
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 99
                self.typeParams()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.VarContext)
            else:
                return self.getTypedRuleContext(HaskellParser.VarContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_varList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarList" ):
                listener.enterVarList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarList" ):
                listener.exitVarList(self)




    def varList(self):

        localctx = HaskellParser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.var()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HaskellParser.VAR:
                self.state = 103
                self.var()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(HaskellParser.VarContext,0)


        def num(self):
            return self.getTypedRuleContext(HaskellParser.NumContext,0)


        def funcCall(self):
            return self.getTypedRuleContext(HaskellParser.FuncCallContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.ExprContext)
            else:
                return self.getTypedRuleContext(HaskellParser.ExprContext,i)


        def binOp(self):
            return self.getTypedRuleContext(HaskellParser.BinOpContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HaskellParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 110
                self.var()
                pass

            elif la_ == 2:
                self.state = 111
                self.num()
                pass

            elif la_ == 3:
                self.state = 112
                self.funcCall()
                pass

            elif la_ == 4:
                self.state = 113
                self.var()
                self.state = 114
                self.match(HaskellParser.T__1)
                self.state = 115
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = HaskellParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 119
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 120
                    self.binOp()
                    self.state = 121
                    self.expr(4)
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class FuncCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(HaskellParser.VarContext,0)


        def exprList(self):
            return self.getTypedRuleContext(HaskellParser.ExprListContext,0)


        def getRuleIndex(self):
            return HaskellParser.RULE_funcCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCall" ):
                listener.enterFuncCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCall" ):
                listener.exitFuncCall(self)




    def funcCall(self):

        localctx = HaskellParser.FuncCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.var()
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 129
                self.exprList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.ExprContext)
            else:
                return self.getTypedRuleContext(HaskellParser.ExprContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_exprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprList" ):
                listener.enterExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprList" ):
                listener.exitExprList(self)




    def exprList(self):

        localctx = HaskellParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.expr(0)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 133
                    self.expr(0)
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HaskellParser.RULE_binOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinOp" ):
                listener.enterBinOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinOp" ):
                listener.exitBinOp(self)




    def binOp(self):

        localctx = HaskellParser.BinOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_binOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HaskellParser.T__5) | (1 << HaskellParser.T__6) | (1 << HaskellParser.T__7) | (1 << HaskellParser.T__8))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(HaskellParser.VAR, 0)

        def getRuleIndex(self):
            return HaskellParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = HaskellParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(HaskellParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(HaskellParser.NUM, 0)

        def getRuleIndex(self):
            return HaskellParser.RULE_num

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNum" ):
                listener.enterNum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNum" ):
                listener.exitNum(self)




    def num(self):

        localctx = HaskellParser.NumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_num)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(HaskellParser.NUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HaskellTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(HaskellParser.TypeNameContext,0)


        def haskellType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaskellParser.HaskellTypeContext)
            else:
                return self.getTypedRuleContext(HaskellParser.HaskellTypeContext,i)


        def getRuleIndex(self):
            return HaskellParser.RULE_haskellType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHaskellType" ):
                listener.enterHaskellType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHaskellType" ):
                listener.exitHaskellType(self)



    def haskellType(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HaskellParser.HaskellTypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 32
        self.enterRecursionRule(localctx, 32, self.RULE_haskellType, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HaskellParser.T__9]:
                self.state = 146
                self.match(HaskellParser.T__9)
                pass
            elif token in [HaskellParser.T__10]:
                self.state = 147
                self.match(HaskellParser.T__10)
                pass
            elif token in [HaskellParser.TYPENAME]:
                self.state = 148
                self.typeName()
                pass
            elif token in [HaskellParser.T__11]:
                self.state = 149
                self.match(HaskellParser.T__11)
                self.state = 150
                self.haskellType(0)
                self.state = 151
                self.match(HaskellParser.T__12)
                pass
            elif token in [HaskellParser.T__13]:
                self.state = 153
                self.match(HaskellParser.T__13)
                self.state = 154
                self.haskellType(0)
                self.state = 155
                self.match(HaskellParser.T__14)
                self.state = 156
                self.haskellType(0)
                self.state = 157
                self.match(HaskellParser.T__15)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 166
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = HaskellParser.HaskellTypeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_haskellType)
                    self.state = 161
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 162
                    self.match(HaskellParser.T__3)
                    self.state = 163
                    self.haskellType(2)
                self.state = 168
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPENAME(self):
            return self.getToken(HaskellParser.TYPENAME, 0)

        def getRuleIndex(self):
            return HaskellParser.RULE_typeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeName" ):
                listener.enterTypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeName" ):
                listener.exitTypeName(self)




    def typeName(self):

        localctx = HaskellParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_typeName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(HaskellParser.TYPENAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[10] = self.expr_sempred
        self._predicates[16] = self.haskellType_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)


    def haskellType_sempred(self, localctx:HaskellTypeContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 1)





